sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/baf_DomainActionBinding__mdt.object-meta.xml
<CustomObject>
    <label>Domain Action Binding</label>
    <pluralLabel>Domain Action Bindings</pluralLabel>
</CustomObject>