sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/fields/DomainAction__c.field-meta.xml
<CustomField>
    <fullName>DomainAction__c</fullName>
    <inlineHelpText>Which class should be executed when the data change occurs.</inlineHelpText>
    <label>Domain Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>