sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/fields/IsAsync__c.field-meta.xml
<CustomField>
    <fullName>IsAsync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True and the Trigger Stage is After, then the Domain Action will be executed as a Future.</inlineHelpText>
    <label>Is Asynchronous</label>
    <type>Checkbox</type>
</CustomField>