sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>The order Domain Actions should execute in, within the scope of a Trigger execution.</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>