sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/fields/TriggerChange__c.field-meta.xml
<CustomField>
    <fullName>TriggerChange__c</fullName>
    <defaultValue>&quot;Update&quot;</defaultValue>
    <inlineHelpText>What data change caused the Trigger to fire?</inlineHelpText>
    <label>Trigger Change</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <default>true</default>
                <label>Insert</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>