sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/fields/TriggeredSObject__c.field-meta.xml
<CustomField>
    <fullName>TriggeredSObject__c</fullName>
    <defaultValue>&quot;Account&quot;</defaultValue>
    <inlineHelpText>The SObject data is changing on.</inlineHelpText>
    <label>Triggered SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>