sfdx-framework/sfdx-src/objects/baf_DomainActionBinding__mdt/fields/TriggerStage__c.field-meta.xml
<CustomField>
    <fullName>TriggerStage__c</fullName>
    <defaultValue>&quot;Before&quot;</defaultValue>
    <inlineHelpText>Whether the SObject&apos;s data change should be reacted to Before or After the data change is applied.</inlineHelpText>
    <label>Trigger Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>